# runeflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CLA.md  COMMERCIAL-LICENSE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  publish.yml  test.yml
assets/: logo.xcf
docker/: Dockerfile.dev  Dockerfile.export  Dockerfile.intel  archive-status.html  entrypoint-archive.sh  entrypoint-dev.sh  entrypoint-export.sh  entrypoint-oneshot.sh  entrypoint-open-meteo.sh  nginx.conf
runeflow/service/: plot.py  tariffs.py
runeflow/tests/unit/: test_build_site.py
scripts/: cloudflare-setup.sh  deploy-poll.sh
scripts/systemd/: runeflow-deploy.service  runeflow-deploy.timer
src/runeflow/: __init__.py  binder.py  config.py  exceptions.py  py.typed
src/runeflow/adapters/: __init__.py  _ttl_cache.py
src/runeflow/adapters/generation/: __init__.py  entsoe.py
src/runeflow/adapters/price/: __init__.py  awattar.py  caching.py  energyzero.py  entsoe.py  fallback.py  nordpool_adapter.py
src/runeflow/adapters/store/: __init__.py  parquet.py
src/runeflow/adapters/supplemental/: __init__.py  caching.py  commodity.py  ned.py
src/runeflow/adapters/weather/: __init__.py  caching.py  openmeteo.py  strategies.py
src/runeflow/cli/: __init__.py  app.py
src/runeflow/dashboard/: __init__.py  build.py
src/runeflow/dashboard/assets/: advanced-panels.js  app.js  forecast-chart.js  performance-charts.js  style.css  zone-search.js
src/runeflow/dashboard/templates/: base.html  docs.html  index.html  performance.html  provider.html  zone.html  zone_performance.html
src/runeflow/domain/: __init__.py  forecast.py  generation.py  performance.py  price.py  tariff.py  training.py  weather.py
src/runeflow/ensemble/: __init__.py  condition_gated.py  registry.py  simple_weighted.py
src/runeflow/features/: __init__.py  base.py  cloud.py  commodity.py  cross_border.py  duck_curve.py  generation.py  holiday.py  interaction.py  market.py  precipitation.py  price_lag.py  price_regime.py  registry.py  renewable.py  residual_load.py  solar.py  spike.py  temperature.py  temporal.py  wind.py
src/runeflow/models/: __init__.py  extreme_high.py  extreme_low.py  registry.py  xgboost_quantile.py
src/runeflow/ports/: __init__.py  commodity.py  ensemble.py  generation.py  model.py  price.py  store.py  supplemental.py  validator.py  weather.py
src/runeflow/services/: __init__.py  export_meta.py  export_performance.py  export_quality.py  export_tariffs.py  inference.py  performance.py  plot.py  train.py  update_data.py  warmup.py
src/runeflow/validators/: __init__.py  checks.py  composite.py
src/runeflow/zones/: DISABLED_ZONES.md  __init__.py  config.py  registry.py
src/runeflow/zones/definitions/: __init__.py  at.py  balkans.py  baltics.py  be.py  bg.py  ch.py  cz_sk.py  de_lu.py  dk.py  fi.py  fr.py  gb_ie.py  gr.py  hu.py  iberia.py  it.py  mt_cy.py  nl.py  no.py  pl.py  ro.py  se.py  si_hr.py
src/runeflow/zones/tariffs/: __init__.py  de.py  nl.py  wholesale.py
tests/: __init__.py  conftest.py
tests/unit/: test_adapters.py  test_cli.py  test_config.py  test_domain.py  test_ensemble.py  test_features.py  test_models.py  test_performance.py  test_plot.py  test_services.py  test_store.py  test_validators.py  test_zones.py
