[project]
name = "runeflow"
version = "0.1.0"
description = "Electricity price forecasting for ENTSO-E zones"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pandas>=2.2",
    "numpy>=1.26",
    # ML
    "xgboost==3.1.2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    # Data sources
    "entsoe-py>=0.6",
    "requests>=2.32",
    "openmeteo-requests>=1.3",
    "retry-requests>=2.0",
    # Features
    "pvlib>=0.11",
    "holidays>=0.46",
    # Config, DI & CLI
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "inject>=5.2",
    "typer>=0.12",
    # Plotting
    "matplotlib>=3.9",
    # Storage
    "pyarrow>=17.0",
    # Logging
    "loguru>=0.7",
    # Env
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "vcrpy>=6.0",
]
intel = [
    "scikit-learn-intelex>=2024.0",
]

[project.scripts]
runeflow = "runeflow.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runeflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
